2008-05-11
    * Fix bug - --trim=0 combined with --name-encrypt combined with --delete:
      Would not detect deleted files on absolute names

Version 1.06
2007-11-28
    * Fix regression - setting the filemap meta data would sometimes segfault
    * Clarified in program help that -c also works with --filelist. Closes 1759890
    * Make the library tests not depend on specific file extension. Closes 1717324

2007-11-21
    * Fix segmentation fault when given the wrong file as private/public key
    * Fix regression - encrypting stdin stopped working in 1.05

Version 1.05
2007-11-16
    * Add option --modify-window that mimics the rsync option of the same
      name.

2007-11-14
    * Add option governing use of O_NOATIME (where applicable).
    * By default, auto detect whether O_NOATIME will fail, and only use where
      it will succeed.

Version 1.04
2007-07-20
    * Make sure that in tree build tests still works

Version 1.03
2007-07-10
    * Fix error when using stdin for filelist on Unix
    * Improve running tests on out of tree builds

Version 1.02
2007-01-25
    * Fix the stat function (on Windows) to use GetFileAttributesEx insead of FindFirstFile
    * Convert the utimes function (on Windows) to use "SetFileTime" instead of the posix utimes.
      This solves a problem where files inside daylight saving periods had their timestamp copied
      wrong. This is a serious anomality in FILETIME disregarding daylight saving.

Version 1.01
2007-01-17 Shachar Shemesh
    * Implement the autofd::stat function properly (win32)
    * Fix the implementation of autofd::fstat (win32) to report the file type
    * Make sure that all *stat functions go through the wrappers

Version 1.00
2007-01-12 Shachar Shemesh
    * Modify the "off_t" type on Windows to 64 bit to allow files greater than 4GB

Version 0.19
2006-11-21 Shachar Shemesh
	* Implement proper write buffering while encrypting.
	* Implement buffering (read and write) while decrypting.
